--- a/Practica Git.html
+++ b/Practica Git.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/estilo.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
     <h1>Hola mundo </h1>
 
-    <!--Yo puedo aparte de hacer los add y los commit de todos los archivos puedo hacerlos por pedacitos
-    eso se hace con el comando git add -patch -->
-
-    <p>Esto lo quiero agregar</p>
-    <p>Esto no lo quiero agregar</p>
+  
 </body>
 </html>
